--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "devDependencies": {
+    "@types/node": "^14.6.4",
+    "typescript": "^4.0.2"
+  },
   "bugs": {
     "url": "https://github.com/WearifulCupid0/erela.js-deezer/issues"
   }
